# ai-agent-server

./: .dockerignore  .env.example  .gitignore  BAILIAN_DIRECT_CALL.md  CLAUDE.md  Dockerfile  Gprojectclaude-codeminimal-k8s-agent-demotargettest-compile-output.txt  Gprojectclaude-codeminimal-k8s-agent-demotargettest-output.txt  JAVA_ENV.md  README.md  STREAMING_CALL_SUMMARY.md  build-and-run.bat  build.bat  compile.bat  convert-utf8-nobom.ps1  convert-utf8.ps1  docker-compose.yml  install-jdk21.bat  install-jdk21.ps1  kill-port-8080.ps1  mvn-wrapper.sh  mvnw.cmd  pom.xml  railway.toml  run.bat  run.sh  start-backend.ps1  start-server.bat  start-server.sh  start.bat  test-chat-flow.js  test-happy-api.ps1  test-happy-api.sh  test-happy-integration.js  test-integration.js  test-local-tools.bat  test-tool-call.js  verify-environment.bat  verify-environment.sh
code/: test-chat-flow.js  test-happy-integration.js  test-integration.js  websocket-test.js
docs/: COMPLETED.md  CORE-FEATURES-PHASE2.md  ENVIRONMENT-SETUP.md  FEATURE-GAP-ANALYSIS.md  FIXES-2026-04-03.md  GAP_ANALYSIS_AND_ROADMAP.md  HAPPY_ALIGNMENT_TEST_REPORT.md  HAPPY_PROTOCOL_REFERENCE.md  JAVA21_CODING_STYLE.md  LOCAL-TOOLS-IMPLEMENTATION.md  MCP_SKILLS_IMPLEMENTATION.md  MCP_SKILLS_INTEGRATION.md  QUICKSTART-HAPPY-PROTOCOL.md  TEST-COVERAGE.md  TEST-PLAN.md  TEST_REPORT.md  TODO-PRIORITY-LIST.md  TODO.md  TOOL-IMPLEMENTATION-REPORT.md  UPDATE-SUMMARY.md  WEBSOCKET-API.md  agentscope-sandbox-integration.md  (+25 more)
remote-tools/: DEPLOYMENT.md  Dockerfile  README.md  main.py  pyproject.toml  railway.toml
(+475 files in other folders)
