[project]
name = "ai-agent-remote-tools"
version = "0.1.0"
description = "Remote tool execution service for AI Agent - isolated sandbox for dangerous operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.43.0",
]
